Affichage du solde du fournisseur dans l'en-tête si l'utilisateur connecté est un fournisseur
- Ajout d'une condition pour vérifier le rôle de l'utilisateur connecté
- Affichage du solde du fournisseur à côté du message de bienvenue
- Correction du nombre de cases cochées dans le template du detaille du
  client

--- a/comptes/templates/comptes/detail_client.html
+++ b/comptes/templates/comptes/detail_client.html
@@ -38,7 +38,7 @@
                         <p><strong>Cases Cochées :</strong> {{ ticket_actif.cases_cochees }}/{{ ticket_actif.nombre_cases }}</p>
                         <div class="ticket-card">
                             {% for i in range_cases %}
-                                <div class="ticket-case {% if i < ticket_actif.cases_cochees %}checked{% endif %}">{{ i|add:1 }}</div>
+                                <div class="ticket-case {% if i <= ticket_actif.cases_cochees %}checked{% endif %}">{{ i }}</div>
                             {% endfor %}
                         </div>
                     {% else %}
