--- a/templates/base.html
+++ b/templates/base.html
@@ -103,10 +103,12 @@
         <a class="navbar-brand text-center mb-4" href="{% url 'tableau_de_bord' %}">Gestion des Dépots</a>
         <hr class="bg-secondary">
         {% if user.is_authenticated %}
-            <a href="{% url 'tableau_de_bord' %}"><i class="fas fa-tachometer-alt text-primary"></i> Tableau de Bord</a>
-            <a href="{% url 'liste_clients' %}"><i class="fas fa-users text-success"></i> Liste des Clients</a>
-            <a href="{% url 'enregistrer_transaction' %}"><i class="fas fa-exchange-alt text-warning"></i> Enregistrer une Transaction</a>
-            <a href="{% url 'bilan_journalier' %}"><i class="fas fa-chart-line text-info"></i> Bilan Journalier</a>
+            {% if user.role == "fournisseur" %}
+                <a href="{% url 'tableau_de_bord' %}"><i class="fas fa-tachometer-alt text-primary"></i> Tableau de Bord</a>
+                <a href="{% url 'liste_clients' %}"><i class="fas fa-users text-success"></i> Liste des Clients</a>
+                <a href="{% url 'enregistrer_transaction' %}"><i class="fas fa-exchange-alt text-warning"></i> Enregistrer une Transaction</a>
+                <a href="{% url 'bilan_journalier' %}"><i class="fas fa-chart-line text-info"></i> Bilan Journalier</a>
+            {% endif %}
             <a href="#" onclick="document.getElementById('logout-form').submit();">
                 <i class="fas fa-sign-out-alt text-danger"></i> Déconnexion
             </a>
@@ -117,6 +119,7 @@
         {% else %}
             <a href="{% url 'login' %}"><i class="fas fa-sign-in-alt text-primary"></i> Connexion</a>
         {% endif %}
+
     </div>
 
     <!-- Main Content -->
