Ajout de la vue d'ensemble pour les super utilisateurs
- Création d'une nouvelle vue vue_ensemble pour afficher les informations pertinentes de la plateforme aux super utilisateurs
- Ajout d'une URL pour cette vue dans urls.py
- Création d'un template vue_ensemble.html pour afficher les informations
- Modification du template base.html pour inclure un lien vers cette vue pour les super utilisateurs
- Mise à jour du décorateur role_required pour inclure la vérification des super utilisateurs

--- a/templates/base.html
+++ b/templates/base.html
@@ -109,6 +109,9 @@
                 <a href="{% url 'enregistrer_transaction' %}"><i class="fas fa-exchange-alt text-warning"></i> Enregistrer une Transaction</a>
                 <a href="{% url 'bilan_journalier' %}"><i class="fas fa-chart-line text-info"></i> Bilan Journalier</a>
             {% endif %}
+            {% if user.is_superuser %}
+                <a href="{% url 'vue_ensemble' %}"><i class="fas fa-chart-pie text-info"></i> Vue d'ensemble</a>
+            {% endif %}
             <a href="#" onclick="document.getElementById('logout-form').submit();">
                 <i class="fas fa-sign-out-alt text-danger"></i> Déconnexion
             </a>
