feat: Implémentation du modèle économique basé sur la commission et gestion des accès des fournisseurs
- Ajout d'un champ `active` au modèle `CustomUser` pour gérer l'accès des fournisseurs
- Création d'une vue et d'une page d'administration pour gérer les commissions et le statut des fournisseurs
- Configuration d'un middleware pour vérifier si le fournisseur est actif avant de permettre l'accès
- Ajout du modèle `GlobalSettings` pour configurer la commission comme une variable globale modifiable via l'interface d'administration
- Mise à jour de la logique de calcul des commissions dans `gestion_tickets_depot` pour utiliser le taux de commission global
- Ajout de tests unitaires pour vérifier la logique de commission et l'accès aux vues
- Ajout de la fonctionnalité pour permettre aux superusers de voir une vue d'ensemble sur la plateforme

--- a/templates/admin/vue_ensemble.html
+++ b/templates/admin/vue_ensemble.html
@@ -25,6 +25,7 @@
                         <th>Fournisseur</th>
                         <th>Chiffre d'affaires</th>
                         <th>Solde</th>
+                        <th>Platform balance</th>
                         <th>Nombre de clients</th>
                     </tr>
                 </thead>
@@ -34,6 +35,7 @@
                         <td>{{ info.fournisseur.username }}</td>
                         <td>{{ info.chiffre_affaires }} FCFA</td>
                         <th>{{ info.fournisseur.solde }} FCFA</th>
+                        <th>{{ info.fournisseur.platform_balance }} FCFA</th>
                         <td>{{ info.nombre_clients }}</td>
                     </tr>
                     {% endfor %}
