Ajout du champ téléphone au modèle CustomUser et mise à jour de l'admin
- Ajout du champ `telephone` au modèle `CustomUser`.
- Mise à jour des migrations pour inclure le champ `telephone`.
- Ajout du champ `telephone` dans l'interface d'administration pour la création et la modification des utilisateurs.
- Ajout du champ `telephone` à la liste d'affichage dans l'admin.
- Ajout du champ 'telephone' a la template vue_ensemble.html

--- a/templates/admin/vue_ensemble.html
+++ b/templates/admin/vue_ensemble.html
@@ -23,6 +23,7 @@
                 <thead class="thead-dark">
                     <tr>
                         <th>Fournisseur</th>
+                        <th>Phone</th>
                         <th>Chiffre d'affaires</th>
                         <th>Solde</th>
                         <th>Platform balance</th>
@@ -33,6 +34,7 @@
                     {% for info in fournisseurs_info %}
                     <tr>
                         <td>{{ info.fournisseur.username }}</td>
+                        <td>{{ info.fournisseur.telephone }}</td>
                         <td>{{ info.chiffre_affaires }} FCFA</td>
                         <th>{{ info.fournisseur.solde }} FCFA</th>
                         <th>{{ info.fournisseur.platform_balance }} FCFA</th>
